--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,5 @@
-REACT_APP_API=http://localhost:8080
+REACT_APP_API=https://backend-ecommerce-efck.onrender.com
+
 
 # REACT_APP_BASE_URL=http://localhost:8080/api/
 
